--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-	<span onclick='writeToClipboardHtml("<body><br><br><b>Noah Adler</b><br><a style=\"color: black\" href=\"mailto:noah.adler@dr-adler.com\">noah.adler@dr-adler.com</a><br><br><b>Dr. Adler Skincare GmbH</b><br>Richard-Strauss-Straße 37, 14193 Berlin<br><a href=\"https://www.dr-adler.com\" style=\"color: black\">https://www.dr-adler.com</a><br>Registereintrag: Amtsgericht Charlottenburg – HRB 224001 B<br>Geschäftsführung: Prof. Dr. Karl-Erich Grözinger</body>");'>SKIN NOTEL	</span>
+	<span onclick='writeToClipboardHtml("<body><br><br><b>Noah Adler</b><br><a style=\"color: black\" href=\"mailto:noah.adler@dr-adler.com\">noah.adler@dr-adler.com</a><br><br><b>Dr. Adler Skincare GmbH</b><br>Richard-Strauss-Straße 37, 14193 Berlin<br><a href=\"https://www.dr-adler.com\" style=\"color: black\">https://www.dr-adler.com</a><br><span>Registereintrag: Amtsgericht Charlottenburg – HRB 224001 B</span><br><span>Geschäftsführung: Prof. Dr. Karl-Erich Grözinger</span></body>");'>SKIN NOTEL	</span>
 <hr>
 	<span onclick='writeToClipboardHtml("<body><br><br><b>Noah Adler</b><br><a style=\"color: black\" href=\"mailto:noah.adler@dr-adler.com\">noah.adler@dr-adler.com</a><br><a style=\"color: black\" href=\"tel:+4915753656097\">+49 1575 3656097</a><br><a style=\"color: black\" href=\"https://wa.me/message/PNIKPJB3DQA4J1\">WhatsApp</a><br><br><b>Dr. Adler Skincare GmbH</b><br>Richard-Strauss-Straße 37, 14193 Berlin<br><a href=\"https://www.dr-adler.com style=\"color: black\">https://www.dr-adler.com</a><br>Registereintrag: Amtsgericht Charlottenburg – HRB 224001 B<br>Geschäftsführung: Prof. Dr. Karl-Erich Grözinger</body>");'>SKIN YESTEL</span>
 <hr>
